--- a/content/post/my-new-post/index.Rmd
+++ b/content/post/my-new-post/index.Rmd
@@ -1,7 +1,7 @@
 ---
 output: hugodown::md_document
 title: "TidyTuesday Penguins"
-summary: "Penguins, Datapasta, and a Github website"
+summary: "Penguins, Datapasta, and a Github Cawebsite"
 author: "rbkeeney"
 tags: []
 date: 2020-07-28
@@ -9,52 +9,65 @@ date: 2020-07-28
 
 ## Introduction 
 
-In my 1st ever TidyTuesday, I was inspired by Asmae Toumi's (@asmae_toumi) recent twitter post to create a caladown site through github. Here's a link to the guide she posted: [Youtube Video](https://www.youtube.com/watch?v=HtQhG80MKQE)
+In my 1st ever TidyTuesday, I felt inspired by Asmae Toumi's (@asmae_toumi) recent twitter post about creating a caladown site through github. Here's a link to the guide she posted: [Youtube Video](https://www.youtube.com/watch?v=HtQhG80MKQE)
 
-It took Asmae 15 minutes to deploy her site, it took me about 4 hours because I've never used git or created a github repo from R before today. After learning a few new cuss words, crashing R multiple times, learning about how to remove ".git/index.lock" files, creating tokens and SSH keys, and troubleshooting why my R "Git" repo would link and post... but not allow me to commit and push data I sort of gave up.
+It took Asmae 15 minutes to deploy her site.
 
-Well, I mean that I downloaded Github for my desktop and dragged the new doc files into the repo. 
+*It took me about 6 hours.* I've never used git or created a github repo from R before today. A summary of how it went?
+
+* Gownload git
+* Google how to use git
+* Learn a new cuss words
+* Crash R a feww times
+* Learn more cuss words
+* Learn how to set directories and remove ".git/index.lock" files
+* Create a SSH key
+* Create a Github token
+* Troubleshoot why R crashes when I run "commit" or "push"
+* Fix it
+* Repo is working!
+* Break post code
+* Ugh.
 
 So. Much. Fun.
 
-*eventually I got if figured out*
+*and yes, eventually I got it figured out*
 
 ## Getting Started
 
-My Tidytuesday entry is more about creating a caladown site, using rMarkdown and some datapasta, and perhaps making a animated plot.
-For more on rMarkdown: [rMarkdown Intro](https://rmarkdown.rstudio.com/articles_intro.html)
+Finally getting to the R code (the easy portion!), my Tidytuesday entry about creating a caladown site, using rMarkdown and some datapasta, and eventually making a simple animated plot.
 
-1st, let's see how to install the datasets, for more detail check out the post  [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-07-28/readme.md)
+First, let's install the our libraries and load them, for more detail check out the post  [here](https://github.com/rfordatascience/tidytuesday/blob/master/data/2020/2020-07-28/readme.md)
 
-```{r install it}
+```{r install it, message=FALSE, warning=FALSE}
 #install.packages("tidytuesdayR")
 library(tidytuesdayR)
 library(tidyverse)
+library(gganimate)
+library(glue)
 ```
 
-After that, it's just a simple exercise to all in the data. BTW, ctrl+alt+i -> new code section
+TidyTuesday makes is easy to get the data. BTW, ctrl+alt+i -> "insert new code section" is wonderful. For more on rMarkdown: [rMarkdown Intro](https://rmarkdown.rstudio.com/articles_intro.html)
 
-```{r load it}
+```{r load it, message=FALSE, warning=FALSE}
 tuesdata <- tidytuesdayR::tt_load('2020-07-28')
 penguins <- tuesdata$penguins
 ```
 
 ## Datapasta
 
-Great, so we've got the data... but we're making an rMarkdown post, and that means we want to make it pretty. There's a neat little package out there called datapasta... you can load it like so:
+I also wanted to try out a neat little package out there called datapasta... you can load it like so if you don't have it. For more detail, you can visit [Datapasta](https://github.com/MilesMcBain/datapasta).
 
 ```{r install it again}
 #install.packages("datapasta")
 ```
 
-For more detail, you can visit [Datapasta](https://github.com/MilesMcBain/datapasta).
-
-Datapasta allows me to paste data from the web directly into my code in about 2 seconds.
+Datapasta allows you to paste data from the web directly into your code in about 2 seconds.
 
 1. Control+C (windows)
 2. Control+Shift+T (after setting up the new keyboard shortcuts)
 
-Add in a little gt:gt() or knitr:kable() and you've got yourself a nice little table to play with, *additional formatting purely optional*.
+Add in a little gt:gt() or knitr:kable() and you've got yourself a nice little table to play with, *additional formatting purely optional*. After the learning git + github all day, I'm going to use knitr:kable() can call it day.
 
 ```{r past it}
 tibble::tribble(
@@ -68,14 +81,14 @@ tibble::tribble(
                    "sex", "integer",                                        "sex of the animal",
                   "year", "integer",                                            "year recorded"
      ) %>% 
-     gt::gt()
+     knitr::kable()
 ```
 
 ## Animated plot
 
-Alrighty, Now let's make simple plot, flipper length x bill length should do nicely.
+Now I'm going to make a simple plot... flipper length x bill length should do nicely.
 
-```{r plot it}
+```{r plot it, warning=FALSE}
 p1 <- penguins %>% 
      ggplot(aes(y = flipper_length_mm, x = bill_length_mm,color = species,group = species)) +
      geom_smooth(method=lm) +
@@ -87,33 +100,30 @@ p1 <- penguins %>%
           y = "Flipper Length (mm)")
 ```
 
-Let's see what our plot looks like:
+Let's see what the plot looks like:
 
-```{r print it}
+```{r print it, message=FALSE, warning=FALSE}
 p1
 ```
 
-To create an animation from our picture, we need to the gganimate library... and I like to use glue to easily paste labels from data, here I use the "closest_state" command to update the subtitle with which species is being displayed.
+To create an animation from the picture, the gganimate library is needed (loaded previously). I also like to use "glue" to easily paste information from the data. Here, I use the "closest_state" command to update the subtitle with which species is being displayed.
 
-```{r prep it}
-library(gganimate)
-library(glue)
+```{r prep it, warning=FALSE}
 
 p1_anim <- p1 +
-     transition_states(species, transition_length = 2, state_length = 3) +
+     transition_states(species) +
      labs(subtitle = "Species: {closest_state}") +
      ease_aes('cubic-in-out')
 ```
 
-To display our animation, we just call animate()
+To display the animation, just call animate(). This take forever to knit, so I'm going to exclude it from the rMarkdown.
 
-```{r move it}
+```{r move it, echo=FALSE, message=FALSE, warning=FALSE}
 animate(p1_anim)
 ```
 
-And finally, we can save our simple animation locally to use later (Twitter anyone?).
+Finally, if you wanted to save the simple animation locally for later use (Twitter anyone?), you can save the last animated file using anim_save()
 
-```{r save it}
-#anim_save(filename = 'Rplot_animation.gif', animation = last_animation(),path = "C:\\Users\\<your user name>\\Desktop")
+```{r save it, eval=FALSE, include=FALSE}
+# anim_save(filename = 'Rplot_animation.gif', animation = last_animation(),path = "C:\\Users\\keene\\Desktop")
 ```
-
