--- a/docs/_index.Rmd
+++ b/docs/_index.Rmd
@@ -1,32 +1,35 @@
 ---
 output: hugodown::md_document
 title: Home
-summary: "Calade: A Hugo theme and R package by Danielle Navarro"
+summary: "Ryan Keeney's Website"
 ---
 
 
-# Calade
+# Home
 
-### A Hugo theme and R package by [Danielle Navarro](https://twitter.com/djnavarro)
+### An R, sports analytics, and data viz website by [Ryan Keeney](https://twitter.com/rbkeeney) 
 
 <img src="header/caladown.png" width="150px" style="float:right; padding:15px;">
 
 <br>
 
-The goal of calade and caladown is to allow R users to create lightweight websites powered by Hugo and is designed to be compatible with both [hugodown](https://hugodown.r-lib.org/) and [blogdown](https://bookdown.org/yihui/blogdown/), and allows users to generate graphics that match the visual style of the site via the [thematic](https://rstudio.github.io/thematic/) package. There are two components to caladown, a [Hugo theme](https://github.com/djnavarro/hugo-calade) and an [R package](https://github.com/djnavarro/caladown). The simplest way to get started is simply to download the R package from GitHub using the following command:
+Welcome! The goal of this site is to make my code and projects accessible to other R enthusiasts, from beginners to potential employers. If enjoy my work, there's more of it on [Twitter](https://twitter.com/rbkeeney); and, if you have a question or comment my DMs are open.
 
-```{r, eval=FALSE}
-remotes::install_github("djnavarro/caladown")
-```
+If you'd like to support my work, [Patreon](https://www.patreon.com/rbkeeney) is currently the best place. Once you're a member, you'll get access to NFL Analytics and Fantasy football resources such as:
 
-Once the caladown package is installed, the tutorial in the [posts](/post/) section of this site will walk you through the rest of the process. For folks who already know what they are doing, here's the quick guide to setting up a Hugodown site on GitHub Pages:
+* Multiple Shiny Web Apps
+* Rookie Projections and Models 
+* Twitch Live-Streams
+* Rookie and Player Ranks
+* Playbooks for Redraft and Dynasty Leagues
+* Curated Databases for Additional Analysis
 
-```{r, eval=FALSE}
-hugodown::hugo_install("0.66.0") 
-caladown::create_hugodown_calade("my-caladown-site")
-hugodown::hugo_build(dest = "docs")
-usethis::use_git()
-usethis::use_github() # then enable GH Pages with /docs folder
-```
-Note that there is a known issue with knitting the R markdown files for some versions of pandoc: at present the earliest known version that works is pandoc 2.1
+### Special thanks to [Danielle Navarro](https://twitter.com/djnavarro) for the Hugo theme and R package.
 
+For more information about how to build your own site, visit:
+
+* [Hugodown](https://hugodown.r-lib.org/)
+* [Blogdown](https://bookdown.org/yihui/blogdown/) 
+* [Thematic](https://rstudio.github.io/thematic/) 
+* [Hugo theme](https://github.com/djnavarro/hugo-calade)
+* [Caladown R package](https://github.com/djnavarro/caladown)
